--- a/project/page.css
+++ b/project/page.css
@@ -88,6 +88,10 @@ line-height: 135%;
 letter-spacing: -2%;
 text-align: left;
 }
+.program {
+    display: flex;
+    gap: 8px;
+}
 .program span {
     padding-left: 8px;
     padding-right: 8px;
@@ -145,4 +149,203 @@ font-weight: 700;
 line-height: 150%;
 letter-spacing: 0%;
 text-align: left;
+}
+.page3_wrapper {
+    margin: 0 auto;
+    max-width: 872px;
+    display: flex;
+    gap: 56px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.Text_page_3 {
+    display: flex;
+    flex-direction: column;
+    margin-top: 27px;
+    gap: 16px;
+}
+.Text_page_3 span {
+    color: rgba(33, 27, 18, 1);
+font-family: "Inter";
+font-style: Regular;
+font-size: 24px;
+font-weight: 400;
+line-height: 135%;
+text-align: left;
+margin: 0;
+}
+.Text_page_3 h1 {
+  color:  rgba(191, 117, 6, 1);
+font-family: Inter;
+font-style: Bold;
+font-size: 32px;
+font-weight: 700;
+line-height: 125%;
+letter-spacing: -3%;
+text-align: left;
+margin: 0
+}
+.Text_page_3 p {
+    color: rgba(33, 27, 18, 1);
+font-family: Inter;
+font-style: Regular;
+font-size: 16px;
+font-weight: 400;
+line-height: 150%;
+letter-spacing: 0%;
+text-align: left;
+margin: 0;
+}
+.Text_page_3 h2 {
+    color:  rgba(221, 156, 60, 1);
+font-family: Helvetica;
+font-style: Regular;
+font-size: 24px;
+font-weight: 400;
+line-height: 150%;
+
+text-align: left;
+margin: 0;
+}
+.Text_page_3 img {
+   margin-top: 16px;
+width: 200px;
+height: 74.63px;
+}
+.wrat {
+    margin:  0 auto;
+    max-width: 872px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    margin-bottom: 0px;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 140px;
+    
+}
+.Program_scill h1 {
+    color:  rgba(33, 27, 18, 1);
+font-family: Inter;
+font-style: Bold;
+font-size: 24px;
+font-weight: 700;
+line-height: 135%;
+letter-spacing: -2%;
+text-align: left;
+margin: 0px;
+}
+.programs span {
+    padding: 5px 8px 4px 8px;
+    box-sizing: border-box;
+    border: 1px solid  rgba(221, 156, 60, 1);
+    border-radius: 4px;
+    
+}
+.Program_scill {
+    display: flex;
+    flex-direction: column;
+    gap: 17px;
+   
+}
+.writting_header {
+    margin: 0 auto;
+    max-width: 872px;
+    display: flex;
+    padding-left: 40px;
+    padding-right: 40px;
+    flex-direction: column;
+    justify-content: center;
+}
+.writting_header h1 {
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.email form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 435px;
+    margin: 0 auto;
+   
+   
+    
+}
+.email {
+    margin-bottom: 167px;
+}
+.email form input {
+     margin-bottom: 24px;
+     padding-top: 21px;
+     padding-bottom: 21px;
+     box-sizing: border-box;
+border: 3px solid  rgba(224, 222, 220, 1);
+border-radius: 4px;
+
+}
+.email form h1 {
+     text-align: start;
+}
+.email form label {
+  
+     position: relative;
+}
+.email form textarea {
+       margin-bottom: 24px;
+     padding-top: 21px;
+     padding-bottom: 21px;
+     box-sizing: border-box;
+border: 3px solid  rgba(224, 222, 220, 1);
+border-radius: 4px;
+}
+.email form button {
+    display: flex;
+    align-items: center;
+   justify-content: center;
+   text-align: center;
+    width: 120px;
+    background-color: white;
+    border: none;
+    gap: 5px;
+    border-bottom: 2px solid rgba(191, 117, 6, 1);
+     margin-left: 300px;
+     color:  rgba(33, 27, 18, 1);
+font-family: Inter;
+font-style: Bold;
+font-size: 16px;
+font-weight: 700;
+line-height: 150%;
+letter-spacing: 0%;
+text-align: left;
+    
+}
+.submit {
+    display: flex;
+    justify-content: flex-end;
+   
+}
+.email form button:hover {
+    color:  rgb(182, 129, 49);
+    transition: color 1s
+}
+.footer {
+    margin: 0 auto;
+    max-width: 872px;
+    padding-bottom: 16px;
+   text-align: center;
+  
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.footer_span {
+    color:  rgba(131, 128, 124, 1);
+font-family: Inter;
+font-style: Regular;
+font-size: 16px;
+font-weight: 400;
+line-height: 150%;
+letter-spacing: 0%;
+text-align: center;
 }
