--- a/project/page.css
+++ b/project/page.css
@@ -11,7 +11,7 @@
 .img_text h1 {
     color:var(--img_text);
 
-font-family: Inter;
+font-family: Inter-bold;
 font-style: Bold;
 font-size: 48px;
 font-weight: 700;
@@ -19,12 +19,14 @@ line-height: 125%;
 letter-spacing: -3%;
 text-align: left;
 margin:  0px;
+margin-bottom: 8px;
 }
 .img_text p {
     font-family: Inter-bold;
 font-size: 24px;
 font-weight: 700;
 line-height: 125%;
+margin: 0px;
 
 text-align: left;
 margin-bottom: 24px;
@@ -245,6 +247,10 @@ margin: 0px;
     flex-direction: column;
     gap: 17px;
    
+}
+.img_page1 {
+   width: 230px;
+    height: 240px;
 }
 .writting_header {
     margin: 0 auto;
