--- a/project/page.css
+++ b/project/page.css
@@ -297,7 +297,7 @@ margin: 0px;
     display: flex;
     flex-direction: column;
     
-    width: 435px;
+    min-width: 435px;
     margin: 0 auto;
    
    
@@ -326,28 +326,27 @@ margin: 0px;
      box-sizing: border-box;
 border: 3px solid  rgba(224, 222, 220, 1);
 border-radius: 6px;
- width: 435px;
+ width: 100%;
  line-height: 150%;
  background: white;
  padding-left: 20px;
  
 }
-#text_area {
-     width: 435px;
-}
+
 .email form h1 {
      text-align: start;
 }
 
-.email form textarea {
-       margin-bottom: 24px;
+
+.textarr {
+margin-bottom: 24px;
      padding-top: 21px;
      padding-bottom: 21px;
-     box-sizing: border-box;
+    
 border: 3px solid  rgba(224, 222, 220, 1);
 border-radius: 6px;
 padding-left: 20px;
- 
+width: 100%;
 }
 .sumbit {
     display: flex;
@@ -424,6 +423,25 @@ text-align: left;
     .page2 {
           margin-bottom: 29px;
     }
+    .input_class {
+        width: 70%;
+    }
+    .textarr  {
+        width: 70%;
+    }
+    .sumbit {
+        justify-content: center;
+    }
+    .programs {
+        display: flex;
+        flex: 1 1 10px;
+    }
+    .wrat {
+        padding: 0px;
+    }
+    body {
+        padding: 15px;
+    }
 }
 @media (max-width: 520px) {
     .page2 {
@@ -438,6 +456,16 @@ text-align: left;
     }
     .writting_header {
         padding: 0px;
+    }
+    .header_wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: start;
+    }
+    .header_menu ul {
+        flex-direction: column;
+        
     }
    
 }
@@ -462,5 +490,51 @@ text-align: left;
 @media (max-width: 1300px) {
      .iop {
          width: 25%;
+    }
+}
+@media (max-width: 1100px) {
+     .iop {
+        display: none;
+    }
+   
+    
+}
+@media (max-width: 375px) {
+    
+    img {
+        width: 98%;
+    }
+}
+@media (max-width: 436px) {
+    body {
+        width: 95%;
+    }
+    img {
+        width: 95%;
+    }
+}
+@media (max-width: 413px) {
+    body {
+        width: 95%;
+    }
+    img {
+        width: 95%;
+    }
+}
+@media (max-width: 540px) {
+    .page2 {
+        padding: 0px;
+    }
+    .section_top {
+        padding: 0px;
+    }
+    .page3_wrapper {
+        padding: 0px;
+    }
+    .writting_header {
+        padding: 0px;
+    }
+    body {
+        width: 90%;
     }
 }
